# stack_smashing

./: CMakeLists.txt  README.md  main.cpp  protected.cpp
.github/workflows/: cmake-multi-platform.yml
